# code-score

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MOCK_ELIMINATION_FINAL_REPORT.md  MOCK_ELIMINATION_MASTER_PLAN.md  MOCK_ELIMINATION_PROGRESS.md  README.md  pyproject.toml
.github/workflows/: check-linear.yml
.specify/memory/: constitution.md
docs/: GUIDE.md  README.md  ai-code-review-judgement-architecture.md  ai-code-review-judgement-functional-spec.md  ai-code-review-judgement.md  api-reference.md  build-validation-issues.md  checklist-evaluation-progress.md  hackathon-quality-evaluation.md  quick-reference.md  quickstart.md  target-repository-scoring.md  troubleshooting.md
examples/: README.md  go-project.json  javascript-project.json  python-project.json  python-project.md
output/: evaluation_report.md  evaluation_result.json  final_report.md  score_input.json  submission.json
output/evidence/: evidence_summary.json  manifest.json
output/metrics/: anthropic-sdk-python_20251011_115645.json  anthropic-sdk-python_20251011_115645.md  tetris-web_20250929_014849.json  tetris-web_20250929_014849.md
scripts/: run_metrics.sh
specs/: data-models.md
specs/001-1-smoke-tests/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-build-success-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation_results.md
specs/001-docs-git-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-git-log-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-scoringmapper-generate-evidence/: plan.md  quickstart.md
specs/002-toolexecutor-toolchainmanager-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-step-3-llm/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tests-integration-test/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-static-test-infrastructure/: plan.md  spec.md  tasks.md
specs/005-1-phase-2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-provider-llm-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/contracts/: checklist_mapping.yaml  llm_provider_schema.json
src/: __init__.py
(+230 files in other folders)
